fdo#85006 Ignore rare fonts with names ending in ")"

The fonts from an install of WPS/Kingston office contain one such
font, "FZSongS-Extended(SIP)", which otherwise causes a crash due
to confusion between it and "FZSongS-Extended" (without "(SIP)").

Change-Id: I80df99f965636ea755abe8c58f1575e8f20ace29